Fixed z-index for touch devices

--- a/client/main.less
+++ b/client/main.less
@@ -56,8 +56,6 @@ x3d.active {
 	right: 0;
 	bottom: 0;
 
-	z-index: -1;
-
 	cursor: move;
 	
 	&.build {
